--- a/theme.css
+++ b/theme.css
@@ -108,6 +108,27 @@
   word-spacing: normal !important;
 }
 
+.site-levels-cards {
+  align-items: stretch !important;
+}
+
+.site-levels-cards .lvl {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.site-levels-cards .lvl p {
+  flex: 1 1 auto;
+  min-height: calc(1.65em * 3);
+  margin-bottom: 0 !important;
+}
+
+.site-levels-cards .lvl div[style*="border-top"] {
+  margin-top: auto !important;
+  flex-shrink: 0;
+}
+
 .site-marquee {
   background: var(--accent) !important;
 }
@@ -246,7 +267,7 @@
 }
 
 .site-levels-cards .lvl:nth-child(2) .site-lvl-num {
-  color: var(--white) !important;
+  color: var(--blue) !important;
 }
 
 .site-levels-cards .lvl:nth-child(3) div[style*="border-top"] {
